wip: add create register in book
